--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>hello</h1>
     <h2>hello word</h2>
     <h3>welcome</h3>
-    <h4>edit dev</h4>
+    <h4>edit master</h4>
 </body>
 </html>
